--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   "author": "Rafael Moro",
   "license": "MIT",
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0"
   },
   "devDependencies": {
