--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "author": "Rafael Moro",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.8.2",
+    "@mui/material": "^5.8.2",
     "@reduxjs/toolkit": "^1.8.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
