[ADD] - The utility to format numbers into currency was created. It was implemented into the Account component

--- a/.gitignore
+++ b/.gitignore
@@ -94,6 +94,7 @@ build/Release
 node_modules/
 jspm_packages/
 package-lock.json
+test/
 
 # Snowpack dependency directory (https://snowpack.dev/)
 web_modules/
